# FundamentalsOfAI

./: README.md  pyproject.toml
lab1/: lab_1.ipynb
lab2/: lab_2.ipynb
lab3/: lab_3.ipynb
lab4/: lab_4.ipynb
lab5/gdrive/MyDrive/poquad/question-context-classification/dev/: state.json
lab5/gdrive/MyDrive/poquad/question-context-classification/train/: state.json
lab6/: lab_6.ipynb
lab7/: lab_7.ipynb
