[tool.poetry]
name = "fundametalsofai"
version = "0.1.0"
description = ""
authors = ["Piotr Branewski <pbranewski@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

